Class logic has been changed ( instance to static )

--- a/tests/index.html
+++ b/tests/index.html
@@ -1,5 +1,7 @@
 <?php
 	require_once "../src/timely.php";
-	$t = new timely();
-	$t->getRelativeTime( "2014-12-01" );
+	//$t = new timely();
+	//$t->getRelativeTime( "2014-12-01" );
+	echo Timely::getRelTimeFromNow("2014-12-01");
+	print_r($t);
 ?>
