--- a/tests/index.html
+++ b/tests/index.html
@@ -1,7 +1,6 @@
 <?php
 	require_once "../src/timely.php";
-	//$t = new timely();
-	//$t->getRelativeTime( "2014-12-01" );
-	echo Timely::getRelTimeFromNow("2014-12-01");
-	print_r($t);
+	header('Content-Type: text/html; charset=utf-8');
+	echo Timely::getRelTimeFromNow("2014-12-14");
+
 ?>
